fix tap highlight color on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	scroll-behavior: smooth;
+	-webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -200,6 +201,7 @@ body {
 	width: 100%;
 	height: 100%;
 	z-index: 2;
+	-webkit-tap-highlight-color: transparent;
 }
 
 .progress-ring circle {
